# polyalign

./: .gitignore  LICENSE  Makefile  Makefile.in  README  README.md  aclocal.m4  autogen.sh  build.sh  config.status  config.status.lineno  configure  configure.in  configure.lineno  libtool
CVS/: Entries  Repository
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
emboss_acd/: Makefile  Makefile.am  Makefile.in  para2.acd
emboss_acd/CVS/: Entries  Repository
emboss_doc/: Makefile  Makefile.in
emboss_doc/CVS/: Entries  Repository
emboss_doc/html/: Makefile  Makefile.in
emboss_doc/html/CVS/: Entries  Repository
emboss_doc/master/CVS/: Entries  Repository
emboss_doc/master/inc/CVS/: Entries  Repository  Root
emboss_doc/text/: Makefile  Makefile.in
emboss_doc/text/CVS/: Entries  Repository
m4/CVS/: Entries  Repository
source/: DNAMM  DNAMM.save  Makefile  Makefile.am  Makefile.in  Makefile.nonopenmp  PARALLEL_NOTES  TODO  TestPara2.py  alignment.cc  alignment.h  config.h  def_params.txt  dna1  dna2  err.txt  get_emboss_seq.py  log.txt  para2  para2.cc  params.txt  params.txt.mm  seq.stretcher  seqa.fasta  seqb.fasta
source/.deps/: alignment.Po  myseq.Po  mytest.Po  para2.Po
source/CVS/: Entries  Repository
